[tool.poetry]
name = "stackoverflow"
version = "0.1.0"
description = ""
authors = ["ki <karpovilia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.30.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
